# rust-chat

./: Cargo.toml  ace_chat.db
public/css/: style.css
public/js/: login.js  message.js
src/: main.rs  router.rs
src/data/: db.rs  mod.rs  models.rs
src/data/db/: mysql.rs  sqlite.rs
src/data/models/: chat_message.rs  chat_room.rs  chat_user.rs
templates/: base.html.tera  error.html.tera  index.html.tera  room.html.tera  rooms.html.tera
