[package]
name = "rust-test"
version = "0.1.0"
authors = ["Kyle Tanemura <kyletanemura@tecace.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve", "json"]